--- a/style.css
+++ b/style.css
@@ -67,9 +67,12 @@ body {
 }
 
 .swap {
-  height: 80px;
+  height: 70px;
   cursor: pointer;
-  margin-top: 25px;
+  margin-top: 30px;
+  border: 1px solid;
+  border-radius: 40px;
+  padding: 10px;
 }
 
 .convert-btn {
